--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,18 @@ parser.log
 .idea/misc.xml
 .idea/workspace.xml
 .idea/misc.xml
+.idea/workspace.xml
+.idea/workspace.xml
+__pycache__/Trajectory.cpython-36.pyc
+__pycache__/svg_parser.cpython-36.pyc
+__pycache__/SVG_Block.cpython-36.pyc
+__pycache__/STLFile.cpython-36.pyc
+__pycache__/Robot.cpython-36.pyc
+__pycache__/OpenGLControl.cpython-36.pyc
+__pycache__/Kinematics.cpython-36.pyc
+__pycache__/GlobalFunc.cpython-36.pyc
+__pycache__/ConfigRobot.cpython-36.pyc
+__pycache__/Blocks.cpython-36.pyc
+__pycache__/Blocks.cpython-36.pyc
+Opengl_testing/__pycache__/node_editor_wnd.cpython-36.pyc
+__pycache__/Blocks.cpython-36.pyc
