--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ __pycache__/Blocks.cpython-36.pyc
 __pycache__/Blocks.cpython-36.pyc
 Opengl_testing/__pycache__/node_editor_wnd.cpython-36.pyc
 __pycache__/Blocks.cpython-36.pyc
+.idea/markdown-navigator/profiles_settings.xml
